fixing image and pdf sharing